Add a link to the lwn.net article
Signed-off-by: Sven Dowideit <SvenDowideit@home.org.au>
Signed-off-by: Will Deacon <will.deacon@arm.com>

--- a/README
+++ b/README
@@ -97,6 +97,9 @@ project:
 
 http://thread.gmane.org/gmane.linux.kernel/962051/focus=962620
 
+Another detailed example can be found in the lwn.net article:
+
+http://lwn.net/Articles/658511/
 
 Contributing
 ------------
