README: Add maintainers section
Julien has kindly offered to help maintain kvmtool, but it occurred to
me that we don't actually provide any maintainer contact details in the
repository as it stands.

Add a brief "Maintainers" section to the README, immediately after the
"Contributing" section so that people know who to nag about merging and
reviewing patches.

Acked-by: Marc Zyngier <marc.zyngier@arm.com>
Acked-by: Julien Thierry <julien.thierry@arm.com>
Signed-off-by: Will Deacon <will@kernel.org>

--- a/README
+++ b/README
@@ -111,3 +111,9 @@ added automatically by issuing the command
  git config format.subjectprefix "PATCH kvmtool"
 
 in the git repository.
+
+Maintainers
+-----------
+
+kvmtool is maintained by Will Deacon <will@kernel.org> and Julien Thierry
+<julien.thierry@arm.com>.
