README: Update my email address
My @arm.com address is gonna stop working. Update README information
with an address people can use to actually reach me.

Signed-off-by: Julien Thierry <julien.thierry.kdev@gmail.com>
Signed-off-by: Will Deacon <will@kernel.org>

--- a/README
+++ b/README
@@ -116,4 +116,4 @@ Maintainers
 -----------
 
 kvmtool is maintained by Will Deacon <will@kernel.org> and Julien Thierry
-<julien.thierry@arm.com>.
+<julien.thierry.kdev@gmail.com>.
